# CUDA_matrix_mult

./: CMakeLists.txt  README.md  local_output.txt  main.cu  run.sh  server_output.txt
headers/: matrix.h  mul_kernel.h  settings.h  test.h
src/: mul_kernel.cu  test.cu
